manifests/istio/harbor/virtualservice-harbor-route.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: harbor-route
  namespace: harbor
spec:
  hosts:
  - ${HARBOR_HOST}
  gateways:
  - harbor-gateway
  http:
  - match:
    - uri:
        prefix: /api/
    - uri:
        prefix: /service/
    - uri:
        prefix: /v2/
    - uri:
        prefix: /chartrepo/
    - uri:
        prefix: /c/
    route:
    - destination:
        host: harbor-core.harbor.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: harbor-portal.harbor.svc.cluster.local
        port:
          number: 80
